--- a/Hosting/JoF.Rail.Web/Features/Boards/Fastest.cshtml
+++ b/Hosting/JoF.Rail.Web/Features/Boards/Fastest.cshtml
@@ -1,4 +1,5 @@
 ﻿@model JoF.Rail.Core.Models.LiveDepartureBoard.Result.DeparturesBoardModel
+@using JoF.Rail.Core.Extensions
 @{
     ViewBag.Title = "Next Fastest Departure";
     ViewBag.BodyClass = "bg-departure-board text-departure-board";
@@ -6,146 +7,237 @@
 
 @if (Model.Departures.First().Service == null)
 {
-<div class="container">
-    <div class="d-block text-center">No services found.  Please ensure stations are a direct route.</div>
-    <div class="d-block text-center"><a class="btn btn-primary" asp-action="Index"><i class="fas fa-map-marker-alt"></i> Change Station</a></div>
-</div>
+    <div class="container">
+        <div class="d-block text-center">No services found.  Please ensure stations are a direct route.</div>
+        <div class="d-block text-center"><a class="btn btn-primary" asp-action="Index"><i class="fas fa-map-marker-alt"></i> Change Station</a></div>
+    </div>
 }
 else
 {
-    // tiresomly, response does not contain the FilterStation...  CANNOT get flippin Linq to work...
-    var callingPoints = Model.Departures.First().Service.SubsequentCallingPoints.First().CallingPoints;
-    var filtered = new JoF.Rail.Core.Models.LiveDepartureBoard.Result.CallingPointModel();
+    var cols = 8;
 
-    foreach (var p in callingPoints)
-    {
-        if (p.Crs.Equals(Model.Departures.First().Crs))
-        {
-            filtered = p;
-        }
-    }
+    @* find destination station details *@
+    var destination = Model.Departures.SelectMany(d => d.Service.SubsequentCallingPoints).SelectMany(p => p.CallingPoints).FirstOrDefault(x => x.Crs == Model.Departures.First().Crs);
 
-<div class="container">
-    <div class="row align-content-center">
-        <div class="col-5">
-            <h2>Fastest Departure</h2>
-        </div>
-        <div class="col-7 text-right">
-            @{
-                var parms = new Dictionary<string, string>
-                                {
-                                    { "crs", Model.Crs },
-                                    { "filterCrs", filtered.Crs },
-                                };
-            }
-            <a class="btn btn-primary d-none d-sm-inline" asp-action="Departures" asp-all-route-data="parms">Departures</a>
-            <a class="btn btn-primary d-sm-none" asp-action="Departures" asp-all-route-data="parms">Deps</a>
-
-            <a class="btn btn-primary d-none d-sm-inline" asp-action="Arrivals" asp-all-route-data="parms">Arrivals</a>
-            <a class="btn btn-primary d-sm-none" asp-action="Arrivals" asp-all-route-data="parms">Arrs</a>
-
-            <a class="btn btn-primary d-none d-sm-inline" asp-action="Index">Change Station</a>
-            <a class="btn btn-primary d-sm-none" asp-action="Index"><i class="fas fa-map-marker-alt"></i></a>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col">
-            <h3>from @Model.Location to @filtered.Location</h3>
-        </div>
-    </div>
-</div>
-
-<div class="container bg-danger text-white">
-    <div class="row">
-        @foreach (var message in Model.Messages)
-        {
-            <div class="col-12 py-2">@Html.Raw(message)</div>
-        }
-    </div>
-</div>
-
-<div class="container departure-board">
-    <div class="row align-items-center py-3">
-        <div class="col-2 text-center d-none d-sm-block"><strong>Departs</strong></div>
-        <div class="col-3 d-none d-sm-block"><strong>Destination</strong></div>
-        <div class="col-2 text-center d-none d-sm-block"><strong>Expected</strong></div>
-        <div class="col-1 text-center d-none d-sm-block"><strong>Delay</strong></div>
-        <div class="col-1 text-center d-none d-sm-block"><strong>Plat</strong></div>
-        <div class="col-1 text-center d-none d-sm-block"><strong>Coaches</strong></div>
-    </div>
-    <div class="row align-items-center d-sm-none">
-        <div class="col-2 text-center d-sm-none"><strong>Dep</strong></div>
-        <div class="col-3 d-sm-none"><strong>Dest</strong></div>
-        <div class="col-2 text-center d-sm-none"><strong>Exp</strong></div>
-        <div class="col-1 text-center d-sm-none"><i class="fas fa-clock"></i></div>
-        <div class="col-1 text-center d-sm-none"><strong>P</strong></div>
-        <div class="col-1 text-center d-sm-none"><strong>#</strong></div>
-    </div>
-
-    <div id="accordion">
-        @foreach (var departure in Model.Departures)
-        {
-            var service = departure.Service;
-
-            <div class="pb-3" role="button" data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="#@service.Id">
-                <div class="row pb-2">
-                    <div class="col-2 text-center">@service.ScheduledTimeDeparture</div>
-                    <div class="col-3">
-                        @foreach (var dest in service.Destinations)
-                        {
-                            <div class="d-block">@dest.Location</div>
-                            @if (dest.Via != null)
-                            {
-                                <small class="indent d-none d-sm-block">@dest.Via</small>
-                            }
-                        }
-                    </div>
-                    <div class="col-2 text-center">@service.EstimatedTimeDeparture</div>
-                    <div class="col-1 text-center">@service.EstimatedTimeDepartureDelay</div>
-                    <div class="col-1 text-center">@service.Platform</div>
-                    <div class="col-1 text-center">@service.TrainLength</div>
-                    <div class="col-1">
-                        <button class="btn btn-dark" type="button" data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="collapseExample">
-                            <i class="fas fa-info"></i>
-                        </button>
-                    </div>
-                </div>
-                @if (service.DelayReason != null || service.CancellationReason != null)
-                {
-                    <div class="row">
-                        <div class="col-12 text-danger">
-                            @if (service.DelayReason != null && service.CancellationReason == null)
-                            {
-                                @service.DelayReason
-                            }
-                            @if (service.CancellationReason != null)
-                            {
-                                @service.CancellationReason
-                            }
-                        </div>
-                    </div>
+    <div class="container">
+        <div class="row align-content-center">
+            <div class="col-5">
+                <h2>Fastest Departure</h2>
+            </div>
+            <div class="col-7 text-right">
+                @{
+                    var parms = new Dictionary<string, string>
+                                                    {
+                                                        { "crs", Model.Crs },
+                                                        { "filterCrs", destination.Crs },
+                                                    };
                 }
-                <div class="collapse" id="@service.Id" aria-labelledby="@service.Id" data-parent="#accordion">
-                    @{
-                        ViewData["Here"] = Model.Location;
-                        ViewData["There"] = filtered.Location;
-                    }
-                    <partial name="_TrainServiceDetails" model="service" , view-data="ViewData" />
-                </div>
+                <a class="btn btn-primary d-none d-sm-inline" asp-action="Departures" asp-all-route-data="parms">Departures</a>
+                <a class="btn btn-primary d-sm-none" asp-action="Departures" asp-all-route-data="parms">Deps</a>
+
+                <a class="btn btn-primary d-none d-sm-inline" asp-action="Arrivals" asp-all-route-data="parms">Arrivals</a>
+                <a class="btn btn-primary d-sm-none" asp-action="Arrivals" asp-all-route-data="parms">Arrs</a>
+
+                <a class="btn btn-primary d-none d-sm-inline" asp-action="Index">Change Station</a>
+                <a class="btn btn-primary d-sm-none" asp-action="Index"><i class="fas fa-map-marker-alt"></i></a>
             </div>
-                        }
         </div>
-
-        <div class="row py-3">
-            <small class="col-12 text-right">@Model.GeneratedAt</small>
-        </div>
-
-        <small class="row d-sm-none pb-3">
+        <div class="row">
             <div class="col">
-                <i class="fas fa-clock"></i> - Delay, minutes
-                <div>P - Platform number</div>
-                <div># - Number of coaches</div>
+                <h3>from @Model.Location to @destination.Location</h3>
             </div>
-        </small>
+        </div>
     </div>
+
+    <div class="bg-danger text-white">
+        <div class="row px-3">
+            @foreach (var message in Model.Messages)
+            {
+                <div class="col-12 py-2">@Html.Raw(message)</div>
+            }
+        </div>
+    </div>
+
+    <div id="accordion" class="pt-3">
+        <table class="table table-sm table-borderless">
+            <thead>
+                <tr>
+                    <th class="text-center">
+                        <span class="d-none d-sm-block">Departs</span>
+                        <span class="d-block d-sm-none">Dep</span>
+                    </th>
+                    <th>
+                        <span class="d-none d-sm-block">Destination</span>
+                        <span class="d-block d-sm-none">Dest</span>
+                    </th>
+                    <th class="text-center">
+                        <span class="d-none d-sm-block">Expected</span>
+                        <span class="d-block d-sm-none">Exp</span>
+                    </th>
+                    @if (Model.FilterCrs != "")
+                    {
+                        cols -= 2;
+                        <th class="text-center">
+                            <span class="d-none d-sm-block">Arrives</span>
+                            <span class="d-block d-sm-none">Arr</span>
+                        </th>
+                        <th class="text-center">
+                            <span class="d-none d-sm-block">Duration</span>
+                            <span class="d-block d-sm-none"><i class="fas fa-hourglass-half"></i></span>
+                        </th>
+                    }
+                    <th class="text-center">
+                        <span class="d-none d-sm-block">Plat</span>
+                        <span class="d-block d-sm-none">P</span>
+                    </th>
+                    <th class="text-center">
+                        <span class="d-none d-sm-block">Coaches</span>
+                        <span class="d-block d-sm-none">#</span>
+                    </th>
+                    <th></th>
+                </tr>
+            </thead>
+            <thead>
+                @foreach (var departure in Model.Departures)
+                {
+                    var service = departure.Service;
+
+                    var arrivalTime = string.Empty;
+                    var arrivalDelay = string.Empty;
+                    var duration = string.Empty;
+
+                    if (destination != null)
+                    {
+                        arrivalTime = destination.EstimatedTime == "On time" ? destination.ScheduledTime : destination.EstimatedTime;
+                        arrivalDelay = destination.EstimatedTimeDelay != "-" ? destination.EstimatedTimeDelay : string.Empty;
+                        duration = arrivalTime.ToTimeDuration(service.EstimatedTimeDeparture == "On time" ? service.ScheduledTimeDeparture : service.EstimatedTimeDeparture);
+                    }
+
+                    <tr role="button" data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="#@service.Id">
+                        <td class="text-center">@service.ScheduledTimeDeparture</td>
+                        <td>
+                            @foreach (var dest in service.Destinations)
+                            {
+                                <span class="d-block text-truncate">@dest.Location</span>
+                                @if (dest.Via != null)
+                                {
+                                    <span class="d-block small indent">@dest.Via</span>
+                                }
+                            }
+                        </td>
+                        <td class="text-center">
+                            <span>@service.EstimatedTimeDeparture</span>
+                            @if (service.EstimatedTimeDepartureDelay != "-")
+                            {
+                                <span class="text-danger small">&nbsp;(@service.EstimatedTimeDepartureDelay)</span>
+                            }
+                        </td>
+                        @if (Model.FilterCrs != "")
+                        {
+                            <td class="text-center">
+                                <span>@arrivalTime</span>
+                                @if (arrivalDelay != string.Empty)
+                                {
+                                    <span class="text-danger small">&nbsp;(@arrivalDelay)</span>
+                                }
+                            </td>
+                            <td class="text-center">
+                                <span>
+                                    @duration
+                                    @if (duration != string.Empty)
+                                    {
+                                        <span class="d-none d-sm-inline"> mins</span>
+                                    }
+                                </span>
+                            </td>
+                        }
+                        <td class="text-center"><span>@service.Platform</span></td>
+                        <td class="text-center">
+                            @if (service.TrainLength > 0)
+                            {<span>@service.TrainLength</span>}
+                        </td>
+                        <td class="text-center d-none d-sm-block">
+                            <span data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="collapseExample">
+                                <i class="fas fa-angle-down"></i>
+                            </span>
+                        </td>
+                    </tr>
+                    @if (service.DelayReason != null
+                  || service.CancellationReason != null
+                  || service.IsFilterLocationCancelled)
+                    {
+                        <tr>
+                            <td colspan="@cols" class="text-danger">
+                                @if (service.DelayReason != null && service.CancellationReason == null)
+                                {
+                                    <div>@service.DelayReason</div>
+                                }
+                                @if (service.CancellationReason != null)
+                                {
+                                    <div>@service.CancellationReason</div>
+                                }
+                                @if (service.IsFilterLocationCancelled)
+                                {
+                                    <div>No longer stopping at destination</div>
+                                }
+                            </td>
+                        </tr>
+                    }
+
+                    <tr>
+                        <td colspan="@cols" class="hiddenRow">
+                            <div id="@service.Id" class="collapse" aria-labelledby="@service.Id" data-parent="#accordion">
+                                @{
+                                    ViewData["Here"] = Model.Location;
+                                    ViewData["There"] = destination.Location;
+                                }
+                                <partial name="_TrainServiceDetails" model="service" , view-data="ViewData" />
+                            </div>
+                        </td>
+                    </tr>
+                }
+                <tr>
+                    <td colspan="@cols" class="small text-right">
+                        <span class="pt-3">@Model.GeneratedAt</span>
+                    </td>
+                </tr>
+            </thead>
+        </table>
+
+        <div class="row">
+            <small class="col-12 d-sm-none pb-3">
+                <span class="d-block"><i class="fas fa-hourglass-half"></i> - Journey duration, minutes</span>
+                <span class="d-block"><i class="fas fa-clock"></i> - Delay, minutes</span>
+                <span class="d-block">P - Platform number</span>
+                <span class="d-block"># - Number of coaches</span>
+            </small>
+        </div>
+    </div>
+}
+
+@section Styles {
+    <style type="text/css">
+        tr[aria-expanded="true"] i.fas {
+            transform: rotate(180deg);
+            transition: all linear 0.25s;
+        }
+
+        tr[aria-expanded="false"] i.fas {
+            transition: all linear 0.25s;
+        }
+
+        .hiddenRow {
+            padding: 0 !important;
+        }
+    </style>
+}
+
+@section Scripts {
+    <script>
+        (function () {
+            $('.collapse').on('show.bs.collapse', function () {
+                $('.collapse.in').collapse('hide');
+            });
+        })();
+    </script>
 }
