--- a/Hosting/JoF.Rail.Web/Features/Shared/_Footer.cshtml
+++ b/Hosting/JoF.Rail.Web/Features/Shared/_Footer.cshtml
@@ -1,14 +1,17 @@
 ﻿<div class="container-fluid p-4">
     <div class="row">
-        <div class="col-12 ml-auto">
+        <div class="col-6">
+            <span class="small">&copy; 2018 - TickleTiger, v0.2</span>
+        </div>
+        <div class="col-6 text-right">
             <a class="float-right" href="http://www.nationalrail.co.uk/46391.aspx" target="_blank">
-                <img src="~/images/NRE_Powered_logo.png" alt="Powered by National Rail Equiries" style="width: 250px" />
+                <img src="~/images/NRE_Powered_logo.png" alt="Powered by National Rail Equiries" style="width: 200px" />
             </a>
         </div>
     </div>
-    <div class="row small">
+    @*<div class="row small">
         <div class="col">
             &copy; 2018 - TickleTiger, v0.1
         </div>
-    </div>
+    </div>*@
 </div>
