--- a/Hosting/JoF.Rail.Web/Features/Boards/Departures.cshtml
+++ b/Hosting/JoF.Rail.Web/Features/Boards/Departures.cshtml
@@ -1,10 +1,12 @@
-﻿@model JoF.Rail.Core.Models.LiveDepartureBoard.Result.StationBoardModel
+﻿@model StationBoardViewModel
+@using JoF.Rail.Core.Extensions
 @{
     ViewBag.Title = "Live Departures";
     ViewBag.BodyClass = "bg-departure-board text-departure-board";
 }
 
 @{
+    var cols = 8;
     var orderedServices = Model.Services.OrderBy(s => (s.ScheduledTimeDeparture ?? s.ScheduledTimeArrival));
 
     <div class="container">
@@ -42,109 +44,199 @@
                 </h3>
             </div>
         </div>
-    </div>
-
-    <div class="container bg-danger text-white">
-        <div class="row">
-            @foreach (var message in Model.Messages)
-            {
-                <div class="col-12 py-2">@Html.Raw(message)</div>
-            }
-        </div>
-    </div>
-
-    <div class="container departure-board">
-        <div class="row align-items-center py-3">
-            <div class="col-2 text-center d-none d-sm-block"><strong>Departs</strong></div>
-            <div class="col-3 d-none d-sm-block"><strong>Destination</strong></div>
-            <div class="col-2 text-center d-none d-sm-block"><strong>Expected</strong></div>
-            <div class="col-1 text-center d-none d-sm-block"><strong>Delay</strong></div>
-            <div class="col-1 text-center d-none d-sm-block"><strong>Plat</strong></div>
-            <div class="col-1 text-center d-none d-sm-block"><strong>Coaches</strong></div>
-        </div>
-        <div class="row align-items-center d-sm-none">
-            <div class="col-2 text-center d-sm-none"><strong>Dep</strong></div>
-            <div class="col-3 d-sm-none"><strong>Dest</strong></div>
-            <div class="col-2 text-center d-sm-none"><strong>Exp</strong></div>
-            <div class="col-1 text-center d-sm-none"><i class="fas fa-clock"></i></div>
-            <div class="col-1 text-center d-sm-none"><strong>P</strong></div>
-            <div class="col-1 text-center d-sm-none"><strong>#</strong></div>
+    
+        <div class="bg-danger text-white">
+            <div class="row px-3">
+                @foreach (var message in Model.Messages)
+                {
+                    <div class="col-12 py-2">@Html.Raw(message)</div>
+                }
+            </div>
         </div>
 
-        <div id="accordion">
-        @foreach (var service in Model.Services)
-        {
-            <div class="pb-3" role="button" data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="#@service.Id">
-                <div class="row pb-2 align-items-center">
-                    <div class="col-2 text-center">@service.ScheduledTimeDeparture</div>
-                    <div class="col-3">
-                        @foreach (var dest in service.Destinations)
+        <div id="accordion" class="pt-3">
+            <table class="table table-sm table-borderless">
+                <thead>
+                    <tr>
+                        <th class="text-center">
+                            <span class="d-none d-sm-block">Departs</span>
+                            <span class="d-block d-sm-none">Dep</span>
+                        </th>
+                        <th>
+                            <span class="d-none d-sm-block">Destination</span>
+                            <span class="d-block d-sm-none">Dest</span>
+                        </th>
+                        <th class="text-center">
+                            <span class="d-none d-sm-block">Expected</span>
+                            <span class="d-block d-sm-none">Exp</span>
+                        </th>
+                        @if (Model.FilterCrs != "")
                         {
-                            <div class="d-block">@dest.Location</div>
-                            @if (dest.Via != null)
-                            {
-                                <small class="indent d-none d-sm-block">
-                                    @dest.Via
-                                </small>
-                            }
+                            cols -= 2;
+                            <th class="text-center">
+                                <span class="d-none d-sm-block">Arrives</span>
+                                <span class="d-block d-sm-none">Arr</span>
+                            </th>
+                            <th class="text-center">
+                                <span class="d-none d-sm-block">Duration</span>
+                                <span class="d-block d-sm-none"><i class="fas fa-hourglass-half"></i></span>
+                            </th>
                         }
-                    </div>
-                    <div class="col-2 text-center">@service.EstimatedTimeDeparture</div>
-                    <div class="col-1 text-center">@service.EstimatedTimeDepartureDelay</div>
-                    <div class="col-1 text-center">@service.Platform</div>
-                    <div class="col-1 text-center">@service.TrainLength</div>
-                    <div class="col-1 text-center">
-                        <button class="btn btn-dark" data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="collapseExample">
-                            <i class="fas fa-info"></i>
-                        </button>
-                    </div>
-                </div>
+                        <th class="text-center">
+                            <span class="d-none d-sm-block">Plat</span>
+                            <span class="d-block d-sm-none">P</span>
+                        </th>
+                        <th class="text-center">
+                            <span class="d-none d-sm-block">Coaches</span>
+                            <span class="d-block d-sm-none">#</span>
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var service in Model.Services)
+                    {
+                        var arrivalTime = string.Empty;
+                        var arrivalDelay = string.Empty;
+                        var duration = string.Empty;
 
-                @if (service.DelayReason != null || service.CancellationReason != null)
-                {
-                    <div class="row pb-2 align-items-center">
-                        <div class="col offset-sm-1 text-danger">
-                            @if (service.DelayReason != null && service.CancellationReason == null)
-                            {
-                                @service.DelayReason
-                            }
-                            @if (service.CancellationReason != null)
-                            {
-                                @service.CancellationReason
-                            }
-                        </div>
-                    </div>
-                }
+                        if (Model.FilterCrs != string.Empty)
+                        {
+                            @* find destination station details *@
+                        var destination = service.SubsequentCallingPoints.SelectMany(p => p.CallingPoints).FirstOrDefault(x => x.Crs == Model.FilterCrs);
 
-                @if (service.IsFilterLocationCancelled)
-                {
-                    <div class="row pb-2 align-items-center">
-                        <div class="col offset-sm-1 text-danger">
-                            <p class="text-danger">No longer stopping at destination</p>
-                        </div>
-                    </div>
-                }
-            </div>
-            <div id="@service.Id" class="collapse" aria-labelledby="@service.Id" data-parent="#accordion">
-                @{
-                    ViewData["Here"] = Model.Location;
-                    ViewData["There"] = Model.FilterLocation;
-                }
-                <partial name="_TrainServiceDetails" model="service" , view-data="ViewData" />
-            </div>
-        }
+                        if (destination != null)
+                        {
+                            arrivalTime = destination.EstimatedTime == "On time" ? destination.ScheduledTime : destination.EstimatedTime;
+                            arrivalDelay = destination.EstimatedTimeDelay != "-" ? destination.EstimatedTimeDelay : string.Empty;
+                            duration = arrivalTime.ToTimeDuration(service.EstimatedTimeDeparture == "On time" ? service.ScheduledTimeDeparture : service.EstimatedTimeDeparture);
+                        }
+                    }
+
+                    <tr role="button" data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="#@service.Id">
+                        <td class="text-center">@service.ScheduledTimeDeparture</td>
+                        <td>
+                            @foreach (var dest in service.Destinations)
+                            {
+                                <span class="d-block text-truncate">@dest.Location</span>
+                                @if (dest.Via != null)
+                                {
+                                    <span class="d-block small indent">@dest.Via</span>
+                                }
+                            }
+                        </td>
+                        <td class="text-center">
+                            <span>@service.EstimatedTimeDeparture</span>
+                            @if (service.EstimatedTimeDepartureDelay != "-")
+                            {
+                                <span class="text-danger small">&nbsp;(@service.EstimatedTimeDepartureDelay)</span>
+                            }
+                        </td>
+                        @if (Model.FilterCrs != "")
+                        {
+                            <td class="text-center">
+                                <span>@arrivalTime</span>
+                                @if (arrivalDelay != string.Empty)
+                                {
+                                    <span class="text-danger small">&nbsp;(@arrivalDelay)</span>
+                                }
+                            </td>
+                            <td class="text-center">
+                                <span>
+                                    @duration 
+                                    @if (duration != string.Empty)
+                                    {
+                                        <span class="d-none d-sm-inline"> mins</span>
+                                    }
+                                </span>
+                            </td>
+                        }
+                        <td class="text-center"><span>@service.Platform</span></td>
+                        <td class="text-center">
+                            @if (service.TrainLength > 0)
+                            {<span>@service.TrainLength</span>}
+                        </td>
+                        <td class="text-center d-none d-sm-block">
+                            <span data-toggle="collapse" data-target="#@service.Id" aria-expanded="false" aria-controls="collapseExample">
+                                <i class="fas fa-angle-down"></i>
+                            </span>
+                        </td>
+                    </tr>
+                        @if (service.DelayReason != null
+                           || service.CancellationReason != null
+                           || service.IsFilterLocationCancelled)
+                        {
+                            <tr>
+                                <td colspan="@cols" class="text-danger">
+                                    @if (service.DelayReason != null && service.CancellationReason == null)
+                                    {
+                                        <div>@service.DelayReason</div>
+                                    }
+                                    @if (service.CancellationReason != null)
+                                    {
+                                        <div>@service.CancellationReason</div>
+                                    }
+                                    @if (service.IsFilterLocationCancelled)
+                                    {
+                                        <div>No longer stopping at destination</div>
+                                    }
+                                </td>
+                            </tr>
+                        }
+
+                        <tr>
+                            <td colspan="@cols" class="hiddenRow">
+                                <div id="@service.Id" class="collapse" aria-labelledby="@service.Id" data-parent="#accordion">
+                                    @{
+                                        ViewData["Here"] = Model.Location;
+                                        ViewData["There"] = Model.FilterLocation;
+                                    }
+                                    <partial name="_TrainServiceDetails" model="service" , view-data="ViewData" />
+                                </div>
+                            </td>
+                        </tr>
+                    }
+                    <tr>
+                        <td colspan="@cols" class="small text-right">
+                            <span class="pt-3">@Model.GeneratedAt</span>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
         </div>
-        
-        <small class="row py-3">
-            <span class="col text-right">@Model.GeneratedAt</span>
-        </small>
 
-        <small class="row d-sm-none pb-3">
-            <span class="col">
-                <i class="fas fa-clock"></i> - Delay, minutes
+        <div class="row">
+            <small class="col-12 d-sm-none pb-3">
+                <span class="d-block"><i class="fas fa-hourglass-half"></i> - Journey duration, minutes</span>
+                <span class="d-block"><i class="fas fa-clock"></i> - Delay, minutes</span>
                 <span class="d-block">P - Platform number</span>
                 <span class="d-block"># - Number of coaches</span>
-            </span>
-        </small>
+            </small>
+        </div>
     </div>
+}
+
+@section Styles {
+    <style type="text/css">
+        tr[aria-expanded="true"] i.fas {
+            transform: rotate(180deg);
+            transition: all linear 0.25s;
+        }
+        tr[aria-expanded="false"] i.fas {
+            transition: all linear 0.25s;
+        }
+        .hiddenRow {
+            padding: 0 !important;
+        }
+    </style>
+}
+
+@section Scripts {
+<script>
+    (function () {
+        $('.collapse').on('show.bs.collapse', function () {
+            $('.collapse.in').collapse('hide');
+        });
+    })();
+</script>
 }
