--- a/Hosting/JoF.Rail.Web/Features/Boards/_CallingPoints.cshtml
+++ b/Hosting/JoF.Rail.Web/Features/Boards/_CallingPoints.cshtml
@@ -1,4 +1,5 @@
-﻿@model JoF.Rail.Core.Models.LiveDepartureBoard.Result.ServiceItemModel
+﻿@*TODO: create a ViewModel*@
+@model JoF.Rail.Core.Models.LiveDepartureBoard.Result.ServiceItemModel
 
 @{
     var service = Model;
@@ -6,161 +7,194 @@
     var there = (string)ViewData["there"];
     var previousTrainLength = 0;
     var bDisplayedTrain = false;
+    var cols = 6;
 
     //var cols = (int)(12 / Math.Max(service.PreviousCallingPoints.Count(), service.SubsequentCallingPoints.Count()));
 
-    <div class="container">
-        @foreach (var c in service.PreviousCallingPoints)
-        {
-            bDisplayedTrain = false;
+    var showDelay = service.PreviousCallingPoints.Any(x => x.CallingPoints.Any(y => (y.ActualTimeDelay != "-" && y.EstimatedTimeDelay != "-" && y.EstimatedTimeDelay != null)))
+                    || service.EstimatedTimeDepartureDelay != "-"
+                    || service.EstimatedTimeArrivalDelay != "-"
+                    || service.SubsequentCallingPoints.Any(x => x.CallingPoints.Any(y => y.EstimatedTimeDelay != "-"));
 
-            @foreach (var p in c.CallingPoints)
+    var showCoaches = service.PreviousCallingPoints.Any(x => x.CallingPoints.Any(y => y.TrainLength != 0))
+                    || service.TrainLength != 0
+                    || service.TrainLength != 0
+                    || service.SubsequentCallingPoints.Any(x => x.CallingPoints.Any(y => y.TrainLength != 0));
+
+    <table class="table-sm table-borderless m-auto">
+        <thead>
+            <tr>
+                <th></th>
+                <th>Station</th>
+                <th>Sched</th>
+                <th>Exp</th>
+                @if (showDelay)
+                {
+                    cols -= 1;
+                    <th><i class="fas fa-clock"></i></th>
+                }
+                @if (showCoaches)
+                {
+                    cols -= 1;
+                    <th>Coaches</th>
+                }
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var c in service.PreviousCallingPoints)
             {
-                if (previousTrainLength != 0 && previousTrainLength != p.TrainLength)
-                {
-                    <hr />
-                }
+                bDisplayedTrain = false;
 
-                previousTrainLength = p.TrainLength;
+                @foreach (var p in c.CallingPoints)
+                {
+                    if (previousTrainLength != 0 && previousTrainLength != p.TrainLength)
+                    {
+                        <tr>
+                            <td colspan="@cols">
+                                <hr />
+                            </td>
+                        </tr>
+                    }
 
-                @if (p.Location.Equals(there))
-                {
-                    <div class="row align-items-center">
-                        <div class="col-4 offset-sm-1 font-weight-bold">@p.Location</div>
-                        <div class="col-2 font-weight-bold">@p.ScheduledTime</div>
-                        @if (p.ActualTime != null)
-                        {
-                            <div class="col-2 font-weight-bold">@p.ActualTime</div>
-                        }
-                        else
-                        {
-                            <div class="col-2 font-weight-bold font-italic">@p.EstimatedTime</div>
-                        }
-                        <div class="col-1 font-weight-bold">@(p.ActualTimeDelay ?? p.EstimatedTimeDelay)</div>
-                        <div class="col-1 font-weight-bold">@p.TrainLength</div>
-                    </div>
-                }
-                else
-                {
-                    <div class="row align-items-center">
-                        <div class="col-sm-1 d-none d-sm-inline text-right" style="top:-11px;">
-                            @if (p.ActualTime == null && !bDisplayedTrain)
-                            {
-                                bDisplayedTrain = true;
-                                <i class="fas fa-train"></i>
-                            }
-                        </div>
-                        <div class="col-4">@p.Location</div>
-                        <div class="col-2">@p.ScheduledTime</div>
-                        <div class="col-2">
-                            @if (p.ActualTime != null)
-                            {
-                                <div>@p.ActualTime</div>
-                            }
-                            else
-                            {
-                                <div class="font-italic">@p.EstimatedTime</div>
-                            }
-                        </div>
-                        <div class="col-1">@(p.ActualTimeDelay ?? p.EstimatedTimeDelay)</div>
-                        <div class="col-1">@p.TrainLength</div>
-                    </div>
-                }
+                    previousTrainLength = p.TrainLength;
 
-                @if (p.AdHocAlerts.Count() > 0)
-                {
-                    <div class="row">
-                        <div class="col text-danger">
-                            @foreach (var a in p.AdHocAlerts)
+                    var isBold = p.Location.Equals(there) ? "font-weight-bold" : "";
+
+                        <tr class="@isBold">
+                            <td class="text-right align-middle" style="position:relative; top:-11px;">
+                                @if (p.ActualTime == null && !bDisplayedTrain)
+                                {
+                                    bDisplayedTrain = true;
+                                    <i class="fas fa-train"></i>
+                                }
+                            </td>
+                            <td class="align-middle">@p.Location</td>
+                            <td class="align-middle">@p.ScheduledTime</td>
+                            <td class="align-middle">
+                                @if (p.ActualTime != null)
+                                {
+                                    <span>@p.ActualTime</span>
+                                }
+                                else
+                                {
+                                    <span class="font-italic">@p.EstimatedTime</span>
+                                }
+                            </td>
+                            @if (showDelay)
                             {
-                                @a<br />
+                                <td class="align-middle small text-danger">&nbsp;@(p.ActualTimeDelay ?? p.EstimatedTimeDelay)</td>
                             }
-                        </div>
-                    </div>
+                            @if (showCoaches)
+                            {
+                                <td class="align-middle text-center">
+                                    @if (p.TrainLength != 0)
+                                    {@p.TrainLength}
+                                </td>
+                            }
+                        </tr>
+                    @if (p.AdHocAlerts.Count() > 0)
+                    {
+                        <tr>
+                            <td class="text-danger">
+                                @foreach (var a in p.AdHocAlerts)
+                                {
+                                    @a<br />
+                                }
+                            </td>
+                        </tr>
+                    }
                 }
             }
-        }
 
-        @if (previousTrainLength != 0 && previousTrainLength != service.TrainLength)
-        {
-            previousTrainLength = service.TrainLength;
-            <hr />
-        }
-
-            <div class="row align-items-center">
-                <div class="col-sm-1 d-none d-sm-inline text-right" style="top:-18px;">
-                    @if (!bDisplayedTrain)
-                    {
-                        bDisplayedTrain = true;
-                        <i class="fas fa-train"></i>
-                    }
-                </div>
-                <div class="col-4 font-weight-bold">@here</div>
-                <div class="col-2 font-weight-bold">
-                    @if (service.ScheduledTimeArrival != null)
-                    {
-                        <div class="d-block">a. @service.ScheduledTimeArrival</div>
-                    }
-                    @if (service.ScheduledTimeDeparture != null) {
-                        <div class="d-block">d. @service.ScheduledTimeDeparture</div>
-                    }
-                </div>
-                <div class="col-2 font-weight-bold">
-                    <div class="font-italic">@service.EstimatedTimeArrival</div>
-                    <div class="font-italic">@service.EstimatedTimeDeparture</div>
-                </div>
-                <div class="col-1 font-weight-bold">
-                    @service.EstimatedTimeArrivalDelay
-                    <br />
-                    @service.EstimatedTimeDepartureDelay
-                </div>
-                <div class="col-1 font-weight-bold">@service.TrainLength</div>
-            </div>
-
-        @foreach (var c in service.SubsequentCallingPoints)
-        {
-            @foreach (var p in c.CallingPoints)
+            @if (previousTrainLength != 0 && previousTrainLength != service.TrainLength)
             {
-                if (previousTrainLength != 0 && previousTrainLength != p.TrainLength)
-                {
-                    <hr />
-                }
+                previousTrainLength = service.TrainLength;
+                <tr><td colspan="@cols"><hr /></td></tr>
+            }
 
-                previousTrainLength = p.TrainLength;
+                <tr class="font-weight-bold">
+                    <td class="text-right align-middle" style="top:-18px;">
+                        @if (!bDisplayedTrain)
+                        {
+                            bDisplayedTrain = true;
+                            <i class="fas fa-train"></i>
+                        }
+                    </td>
+                    <td class="align-middle">@here</td>
+                    <td class="align-middle">
+                        @if (service.ScheduledTimeArrival != null)
+                        {
+                            <div>a. @service.ScheduledTimeArrival</div>
+                        }
+                        @if (service.ScheduledTimeDeparture != null)
+                        {
+                            <div>d. @service.ScheduledTimeDeparture</div>
+                        }
+                    </td>
+                    <td class="align-middle">
+                        <div class="font-italic">@service.EstimatedTimeArrival</div>
+                        <div class="font-italic">@service.EstimatedTimeDeparture</div>
+                    </td>
+                    @if (showDelay)
+                    {
+                        <td class="align-middle">
+                            <div class="font-italic small text-danger">&nbsp;@service.EstimatedTimeArrivalDelay</div>
+                            <div class="font-italic small text-danger">&nbsp;@service.EstimatedTimeDepartureDelay</div>
+                        </td>
+                    }
+                    @if (showCoaches)
+                    {
+                        <td class="align-middle text-center">
+                            @if (service.TrainLength != 0)
+                            {@service.TrainLength}
+                        </td>
+                    }
+                    </tr>
 
-                @if (p.Location.Equals(there))
+            @foreach (var c in service.SubsequentCallingPoints)
+            {
+                @foreach (var p in c.CallingPoints)
                 {
-                    <div class="row align-items-center">
-                        <div class="col-4 offset-sm-1 font-weight-bold">@p.Location</div>
-                        <div class="col-2 font-weight-bold">@p.ScheduledTime</div>
-                        <div class="col-2 font-weight-bold font-italic">@p.EstimatedTime</div>
-                        <div class="col-1 font-weight-bold">@p.EstimatedTimeDelay</div>
-                        <div class="col-1 font-weight-bold">@p.TrainLength</div>
-                    </div>
-                }
-                else
-                {
-                    <div class="row align-items-center">
-                        <div class="col-4 offset-sm-1">@p.Location</div>
-                        <div class="col-2">@p.ScheduledTime</div>
-                        <div class="col-2 font-italic">@p.EstimatedTime</div>
-                        <div class="col-1">@p.EstimatedTimeDelay</div>
-                        <div class="col-1">@p.TrainLength</div>
-                    </div>
-                }
-                @if (p.AdHocAlerts.Count() > 0)
-                {
-                    <div class="row">
-                        <div class="col text-danger">
-                            @foreach (var a in p.AdHocAlerts)
+                    if (previousTrainLength != 0 && previousTrainLength != p.TrainLength)
+                    {
+                        <tr colspan="@cols"><td><hr /></td></tr>
+                    }
+
+                    previousTrainLength = p.TrainLength;
+
+                    var isBold = p.Location.Equals(there) ? "font-weight-bold" : "";
+
+                        <tr class="@isBold align-items-center">
+                            <td class="align-middle"></td>
+                            <td class="align-middle">@p.Location</td>
+                            <td class="align-middle">@p.ScheduledTime</td>
+                            <td class="font-italic align-middle">@p.EstimatedTime</td>
+                            @if (showDelay)
                             {
-                                @a<br />
+                                <td class="font-italic align-middle small text-danger">&nbsp;@p.EstimatedTimeDelay</td>
                             }
-                        </div>
-                    </div>
+                            @if (showCoaches)
+                            {
+                                <td class="align-middle text-center">
+                                    @if (p.TrainLength != 0)
+                                    {@p.TrainLength}
+                                </td>
+                            }
+                        </tr>
+
+                    @if (p.AdHocAlerts.Count() > 0)
+                    {
+                        <tr>
+                            <td colspan="5" class="text-danger">
+                                @foreach (var a in p.AdHocAlerts)
+                                {
+                                    @a<br />
+                                }
+                            </td>
+                        </tr>
+                    }
                 }
             }
-        }
-
-    </div>
+        </tbody>
+    </table>
 }
