--- a/Hosting/JoF.Rail.Web/Features/Maps/Station.cshtml
+++ b/Hosting/JoF.Rail.Web/Features/Maps/Station.cshtml
@@ -6,80 +6,103 @@
 
 <div id="stationMap" class="w-100">&nbsp;</div>
 
+
+@section Styles {
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
+          integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
+          crossorigin="" />
+}
+
 @section Scripts {
+    <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
+            integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
+            crossorigin="">
+    </script>
+
     <script>
         var map;
-        function mapStations() {
-            $.ajax({
-                context: this,
-                url: "/api/StationMapMarkers/All",
-                dataType: "json",
-                success: function (data) {
-                    var hhe = { lat: 51.00525294, lng: -0.105306765 };
 
-                    var myOptions = {
-                        center: hhe,
-                        zoom: 10,
-                        mapTypeId: "OSM",
-                        mapTypeControl: false,
-                        streetViewControl: false
-                    };
+        map = L.map("stationMap").setView([51.0, -0.1], 13);
 
-                    map = new google.maps.Map(document.getElementById("stationMap"), myOptions);
+        L.tileLayer('https://tile.thunderforest.com/{id}/{z}/{x}/{y}.png', { //?apikey={apiKey}', {
+            attribution: '&copy; <a href="https://thunderforest.com">Thunderforest</a> | <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+            maxZoom: 18,
+            id: 'transport',
+            apiKey: 'f31707f58bde4a80baf55db6692385f6'
+        }).addTo(map);
 
-                    map.mapTypes.set("OSM", new google.maps.ImageMapType({
-                        getTileUrl: function (coord, zoom) {
-                            // "Wrap" x (longitude) at 180th meridian properly
-                            // NB: Don't touch coord.x: because coord param is by reference, and changing its x property breaks something in Google's lib
-                            var tilesPerGlobe = 1 << zoom;
-                            var x = coord.x % tilesPerGlobe;
-                            if (x < 0) {
-                                x = tilesPerGlobe + x;
-                            }
-                            // Wrap y (latitude) in a like manner if you want to enable vertical infinite scrolling
+            //function mapStations() {
+            //    $.ajax({
+            //        context: this,
+            //        url: "/api/StationMapMarkers/All",
+            //        dataType: "json",
+            //        success: function (data) {
+            //            var hhe = { lat: 51.00525294, lng: -0.105306765 };
 
-                            return "https://tile.thunderforest.com/transport/" + zoom + "/" + x + "/" + coord.y +".png?apikey=f31707f58bde4a80baf55db6692385f6";
-                        },
-                        tileSize: new google.maps.Size(256, 256),
-                        name: "OpenStreetMap",
-                        maxZoom: 18
-                    }));
+            //            var myOptions = {
+            //                center: hhe,
+            //                zoom: 10,
+            //                mapTypeId: "OSM",
+            //                mapTypeControl: false,
+            //                streetViewControl: false
+            //            };
 
-                    //var transitLayer = new google.maps.TransitLayer();
-                    //transitLayer.setMap(map);
+            //            map = new google.maps.Map(document.getElementById("stationMap"), myOptions);
 
-                    var markers = data.stations.map(function (location, i) {
-                        var marker = new google.maps.Marker({
-                            position: new google.maps.LatLng(location.latitude, location.longitude),
-                            animation: google.maps.Animation.DROP,
-                            title: location.name
-                        });
+            //            map.mapTypes.set("OSM", new google.maps.ImageMapType({
+            //                getTileUrl: function (coord, zoom) {
+            //                    // "Wrap" x (longitude) at 180th meridian properly
+            //                    // NB: Don't touch coord.x: because coord param is by reference, and changing its x property breaks something in Google's lib
+            //                    var tilesPerGlobe = 1 << zoom;
+            //                    var x = coord.x % tilesPerGlobe;
+            //                    if (x < 0) {
+            //                        x = tilesPerGlobe + x;
+            //                    }
+            //                    // Wrap y (latitude) in a like manner if you want to enable vertical infinite scrolling
 
-                        var infoWindow = new google.maps.InfoWindow({
-                            content: "<p><strong>" + location.name + "</strong><br/>Location: " + marker.getPosition() + "</p>"
-                        });
+            //                    return "https://tile.thunderforest.com/transport/" + zoom + "/" + x + "/" + coord.y + ".png?apikey=f31707f58bde4a80baf55db6692385f6";
+            //                },
+            //                tileSize: new google.maps.Size(256, 256),
+            //                name: "OpenStreetMap",
+            //                maxZoom: 18
+            //            }));
 
-                        google.maps.event.addListener(marker, "click", function () {
-                            infoWindow.open(map, marker);
-                        });
+            //            //var transitLayer = new google.maps.TransitLayer();
+            //            //transitLayer.setMap(map);
 
-                        return marker;
-                    });
+            //            var markers = data.stations.map(function (location, i) {
+            //                var marker = new google.maps.Marker({
+            //                    position: new google.maps.LatLng(location.latitude, location.longitude),
+            //                    animation: google.maps.Animation.DROP,
+            //                    title: location.name
+            //                });
 
-                    var markerCluster = new MarkerClusterer(map, markers,
-                        {
-                            imagePath: "../images/m",
-                            maxZoom: 10
-                        });
-                },
-                error: function (data, type) {
-                    alert("Error");
-                }
-            });
-        }
+            //                var infoWindow = new google.maps.InfoWindow({
+            //                    content: "<p><strong>" + location.name + "</strong><br/>Location: " + marker.getPosition() + "</p>"
+            //                });
+
+            //                google.maps.event.addListener(marker, "click", function () {
+            //                    infoWindow.open(map, marker);
+            //                });
+
+            //                return marker;
+            //            });
+
+            //            var markerCluster = new MarkerClusterer(map, markers,
+            //                {
+            //                    imagePath: "../images/m",
+            //                    maxZoom: 10
+            //                });
+            //        },
+            //        error: function (data, type) {
+            //            alert("Error");
+            //        }
+            //    });
+            //}
 
     </script>
-    <script src="~/dist/js/markerclusterer.min.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByDpDMpyj8fERUwwsFy09BLSyBu2Rmm-U&callback=mapStations"
-            async defer></script>
+    @*<script src="~/dist/js/markerclusterer.min.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByDpDMpyj8fERUwwsFy09BLSyBu2Rmm-U&callback=mapStations"
+                async defer></script>*@
+
 }
