--- a/Hosting/JoF.Rail.Web/Features/Maps/Station.cshtml
+++ b/Hosting/JoF.Rail.Web/Features/Maps/Station.cshtml
@@ -1,108 +1,67 @@
 ﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
+    Thunderforest: https://manage.thunderforest.com/dashboard
 *@
 
 <h2>Station Map</h2>
 
 <div id="stationMap" class="w-100">&nbsp;</div>
 
-
 @section Styles {
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
           integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
           crossorigin="" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.4.1/dist/MarkerCluster.css" />
 }
 
 @section Scripts {
     <script src="https://unpkg.com/leaflet@1.3.4/dist/leaflet.js"
             integrity="sha512-nMMmRyTVoLYqjP9hrbed9S+FzjZHW5gY1TWCHA5ckwXZBadntCNs8kEqAWdrb9O7rxbCaA4lKTIWjDXZxflOcA=="
-            crossorigin="">
-    </script>
+            crossorigin=""></script>
+    <script src="https://unpkg.com/leaflet.markercluster@1.4.1/dist/leaflet.markercluster.js"></script>
 
     <script>
-        var map;
+        var $map = $("#stationMap");
+        var $footer = $("footer");
+        $map.css('height', window.innerHeight) - parseInt($footer.outerHeight());
+        $map.css('width', window.innerWidth);
 
-        map = L.map("stationMap").setView([51.0, -0.1], 13);
+        $.ajax({
+            context: this,
+            url: "/api/StationMapMarkers/All",
+            dataType: "json",
+            success: function (data) { addMarkers(data); },
+            error: function (data, type) {
+                alert("Oh pants.  Error :o( ");
+            }
+        });
 
-        L.tileLayer('https://tile.thunderforest.com/{id}/{z}/{x}/{y}.png', { //?apikey={apiKey}', {
-            attribution: '&copy; <a href="https://thunderforest.com">Thunderforest</a> | <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors',
+        var map = L.map("stationMap", {
+            center: new L.LatLng(51.0, -0.1),
+            zoom: 13
+        });
+
+        L.tileLayer("https://tile.thunderforest.com/{style}/{z}/{x}/{y}{r}.png", { //?apikey={apiKey}', {
+            attribution: "Maps &copy; <a href='https://thunderforest.com'>Thunderforest</a> | Data &copy; <a href='https://www.openstreetmap.org/copyright'>OpenStreetMap</a> contributors",
             maxZoom: 18,
-            id: 'transport',
+            style: 'transport',
             apiKey: 'f31707f58bde4a80baf55db6692385f6'
         }).addTo(map);
 
-            //function mapStations() {
-            //    $.ajax({
-            //        context: this,
-            //        url: "/api/StationMapMarkers/All",
-            //        dataType: "json",
-            //        success: function (data) {
-            //            var hhe = { lat: 51.00525294, lng: -0.105306765 };
+        var markers = new L.MarkerClusterGroup({});
 
-            //            var myOptions = {
-            //                center: hhe,
-            //                zoom: 10,
-            //                mapTypeId: "OSM",
-            //                mapTypeControl: false,
-            //                streetViewControl: false
-            //            };
+        function addMarkers(data) {
+            var stations = data.stations.map(function (location, i) {
+                markers.addLayer(
+                    L.marker([location.latitude, location.longitude])
+                        .bindTooltip(location.name)
+                        .openTooltip()
+                    .bindPopup(`<p><strong>${location.name}</strong><br />${location.operator}</p>Location: (${location.latitude}, ${location.longitude})`)
+                    .openPopup()
+                );
+            });
 
-            //            map = new google.maps.Map(document.getElementById("stationMap"), myOptions);
-
-            //            map.mapTypes.set("OSM", new google.maps.ImageMapType({
-            //                getTileUrl: function (coord, zoom) {
-            //                    // "Wrap" x (longitude) at 180th meridian properly
-            //                    // NB: Don't touch coord.x: because coord param is by reference, and changing its x property breaks something in Google's lib
-            //                    var tilesPerGlobe = 1 << zoom;
-            //                    var x = coord.x % tilesPerGlobe;
-            //                    if (x < 0) {
-            //                        x = tilesPerGlobe + x;
-            //                    }
-            //                    // Wrap y (latitude) in a like manner if you want to enable vertical infinite scrolling
-
-            //                    return "https://tile.thunderforest.com/transport/" + zoom + "/" + x + "/" + coord.y + ".png?apikey=f31707f58bde4a80baf55db6692385f6";
-            //                },
-            //                tileSize: new google.maps.Size(256, 256),
-            //                name: "OpenStreetMap",
-            //                maxZoom: 18
-            //            }));
-
-            //            //var transitLayer = new google.maps.TransitLayer();
-            //            //transitLayer.setMap(map);
-
-            //            var markers = data.stations.map(function (location, i) {
-            //                var marker = new google.maps.Marker({
-            //                    position: new google.maps.LatLng(location.latitude, location.longitude),
-            //                    animation: google.maps.Animation.DROP,
-            //                    title: location.name
-            //                });
-
-            //                var infoWindow = new google.maps.InfoWindow({
-            //                    content: "<p><strong>" + location.name + "</strong><br/>Location: " + marker.getPosition() + "</p>"
-            //                });
-
-            //                google.maps.event.addListener(marker, "click", function () {
-            //                    infoWindow.open(map, marker);
-            //                });
-
-            //                return marker;
-            //            });
-
-            //            var markerCluster = new MarkerClusterer(map, markers,
-            //                {
-            //                    imagePath: "../images/m",
-            //                    maxZoom: 10
-            //                });
-            //        },
-            //        error: function (data, type) {
-            //            alert("Error");
-            //        }
-            //    });
-            //}
-
+            map.addLayer(markers);
+        }
     </script>
-    @*<script src="~/dist/js/markerclusterer.min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyByDpDMpyj8fERUwwsFy09BLSyBu2Rmm-U&callback=mapStations"
-                async defer></script>*@
-
 }
